Recordsに対する操作を共通クラスに定義して使用するよう変更